distribution/istio-resources/ingress-class.yaml
apiVersion: networking.k8s.io/v1 # TODO: v1
kind: IngressClass
metadata:
  name: istio
spec:
  controller: istio.io/ingress-controller
