distribution/istio-resources/gateway-authorizationpolicy.yaml
# Allow all traffic to the istio-ingressgateway
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  action: ALLOW # TODO: CUSTOM, oauth2-proxy
  selector:
    # Same as the istio-ingressgateway Service selector
    matchLabels:
      app: istio-ingressgateway
      istio: ingressgateway
  # provider:
  #   name: "oauth2-proxy"
  rules:
  - to:
    - operation:
        hosts:
        - <<__subdomain_dashboard__>>.<<__domain__>>
        # - <<__subdomain_kubecost__>>.<<__domain__>>
        - <<__subdomain_serving__>>.<<__domain__>>
        - '*.<<__subdomain_serving__>>.<<__domain__>>'
